; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_atari.c_Atari800_InitialiseMachine.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_atari.c_Atari800_InitialiseMachine.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FALSE = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @Atari800_InitialiseMachine() #0 {
  %1 = alloca i32, align 4
  %2 = call i32 (...) @ESC_ClearAll()
  %3 = call i32 (...) @load_roms()
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %7, label %5

5:                                                ; preds = %0
  %6 = load i32, i32* @FALSE, align 4
  store i32 %6, i32* %1, align 4
  br label %13

7:                                                ; preds = %0
  %8 = call i32 (...) @Atari800_UpdateKeyboardDetached()
  %9 = call i32 (...) @Atari800_UpdateJumper()
  %10 = call i32 (...) @MEMORY_InitialiseMachine()
  %11 = call i32 (...) @Devices_UpdatePatches()
  %12 = load i32, i32* @TRUE, align 4
  store i32 %12, i32* %1, align 4
  br label %13

13:                                               ; preds = %7, %5
  %14 = load i32, i32* %1, align 4
  ret i32 %14
}

declare dso_local i32 @ESC_ClearAll(...) #1

declare dso_local i32 @load_roms(...) #1

declare dso_local i32 @Atari800_UpdateKeyboardDetached(...) #1

declare dso_local i32 @Atari800_UpdateJumper(...) #1

declare dso_local i32 @MEMORY_InitialiseMachine(...) #1

declare dso_local i32 @Devices_UpdatePatches(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
